finished the main part of the UI

--- a/index.html
+++ b/index.html
@@ -91,6 +91,107 @@
             </div>
         </div>
 
+        <div class="item-section">
+            <div class="item-actions">
+                <h2>Popular Items</h2>
+                <div class="inputs">
+                    <input type="text" id="searchInput" placeholder="Search by food name">
+                    <input type="button" value="search" id="searchBtn">
+                </div>
+                <select id="selectInput">
+                    <option value="category"><span>Search by:</span> category</option>
+                    <option value="name"><span>Search by:</span> name</option>
+                    <option value="ingredient"><span>Search by:</span> ingredient</option>
+                    <option value="category"><span>Search by:</span> area</option>
+                </select>
+            </div>
+
+            <div class="items-div">
+                <div class="item">
+                    <div class="img">
+                        <img src="images/potato.jpeg" alt="">
+                    </div>
+                    <div class="item-info">
+                        <h2>Potato fries and ketchup</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis corporis nulla neque,
+                            facere sed suscipit!
+                        </p>
+                    </div>
+                    <div class="buttons">
+                        <a href="">
+                            <button><i class="fa-solid fa-play"></i> play Video</button>
+                        </a>
+                        <a href="">
+                            <button>view recipe</button>
+                        </a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="img">
+                        <img src="images/potato.jpeg" alt="">
+                    </div>
+                    <div class="item-info">
+                        <h2>Potato fries and ketchup</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis corporis nulla neque,
+                            facere sed suscipit!
+                        </p>
+                    </div>
+                    <div class="buttons">
+                        <a href="">
+                            <button><i class="fa-solid fa-play"></i> play Video</button>
+                        </a>
+                        <a href="">
+                            <button>view recipe</button>
+                        </a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="img">
+                        <img src="images/potato.jpeg" alt="">
+                    </div>
+                    <div class="item-info">
+                        <h2>Potato fries and ketchup</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis corporis nulla neque,
+                            facere sed suscipit!
+                        </p>
+                    </div>
+                    <div class="buttons">
+                        <a href="">
+                            <button><i class="fa-solid fa-play"></i> play Video</button>
+                        </a>
+                        <a href="">
+                            <button>view recipe</button>
+                        </a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="img">
+                        <img src="images/potato.jpeg" alt="">
+                    </div>
+                    <div class="item-info">
+                        <h2>Potato fries and ketchup</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis corporis nulla neque,
+                            facere sed suscipit!
+                        </p>
+                    </div>
+                    <div class="buttons">
+                        <a href="">
+                            <button><i class="fa-solid fa-play"></i> play Video</button>
+                        </a>
+                        <a href="">
+                            <button>view recipe</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
     </div>
 
     <script src="script.js"></script>
