--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
 
             <div class="items-div">
-                <div class="item">
+                <!-- <div class="item">
                     <div class="img">
                         <img src="images/potato.jpeg" alt="">
                     </div>
@@ -126,67 +126,7 @@
                             <button>view recipe</button>
                         </a>
                     </div>
-                </div>
-                <div class="item">
-                    <div class="img">
-                        <img src="images/potato.jpeg" alt="">
-                    </div>
-                    <div class="item-info">
-                        <h2>Potato fries and ketchup</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis corporis nulla neque,
-                            facere sed suscipit!
-                        </p>
-                    </div>
-                    <div class="buttons">
-                        <a href="">
-                            <button><i class="fa-solid fa-play"></i> play Video</button>
-                        </a>
-                        <a href="">
-                            <button>view recipe</button>
-                        </a>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="img">
-                        <img src="images/potato.jpeg" alt="">
-                    </div>
-                    <div class="item-info">
-                        <h2>Potato fries and ketchup</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis corporis nulla neque,
-                            facere sed suscipit!
-                        </p>
-                    </div>
-                    <div class="buttons">
-                        <a href="">
-                            <button><i class="fa-solid fa-play"></i> play Video</button>
-                        </a>
-                        <a href="">
-                            <button>view recipe</button>
-                        </a>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="img">
-                        <img src="images/potato.jpeg" alt="">
-                    </div>
-                    <div class="item-info">
-                        <h2>Potato fries and ketchup</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis corporis nulla neque,
-                            facere sed suscipit!
-                        </p>
-                    </div>
-                    <div class="buttons">
-                        <a href="">
-                            <button><i class="fa-solid fa-play"></i> play Video</button>
-                        </a>
-                        <a href="">
-                            <button>view recipe</button>
-                        </a>
-                    </div>
-                </div>
+                </div> -->
             </div>
         </div>
 
