finished the main JS  functionality, and Changed the UI a little"

--- a/index.html
+++ b/index.html
@@ -45,46 +45,12 @@
                         <button>Ngu Helon</button>
                     </div>
                     <div class="dev-quote">
-                        <div class="img">
-                            <img src="images/helon2.jpeg" alt="">
-                        </div>
                         <div class="dev-more">
                             <h2>Ngu Helon</h2>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus perspiciatis
                                 eveniet odit.
                             </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="dev2">
-                    <div class="icons">
-                        <i class="fa-brands fa-dev"></i>
-                        <i class="fa-solid fa-computer"></i>
-                        <i class="fa-solid fa-computer"></i>
-                        <i class="fa-brands fa-dev"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="developer-stats">
-                <h2>My passion</h2>
-                <div class="more">
-                    <div class="mores">
-                        <div class="icon">
-                            <i class="fa-brands fa-github-alt"></i>
-                        </div>
-                        <div class="passion-info">
-                            <h3>Coding</h3>
-                            <p>coding projects</p>
-                        </div>
-                    </div>
-                    <div class="mores">
-                        <div class="icon">
-                            <i class="fa-brands fa-github-alt"></i>
-                        </div>
-                        <div class="passion-info">
-                            <h3>Coding</h3>
-                            <p>coding projects</p>
                         </div>
                     </div>
                 </div>
@@ -95,14 +61,13 @@
             <div class="item-actions">
                 <h2>Popular Items</h2>
                 <div class="inputs">
-                    <input type="text" id="searchInput" placeholder="Search by food name">
+                    <input type="text" id="searchInput" placeholder="filter meals by category">
                     <input type="button" value="search" id="searchBtn">
                 </div>
                 <select id="selectInput">
-                    <option value="category"><span>Search by:</span> category</option>
-                    <option value="name"><span>Search by:</span> name</option>
-                    <option value="ingredient"><span>Search by:</span> ingredient</option>
-                    <option value="category"><span>Search by:</span> area</option>
+                    <option value="category"><span>filter meals by:</span> category</option>
+                    <option value="name"><span>filter meals by:</span> name</option>
+                    <option value="area"><span>filter meals by:</span> area</option>
                 </select>
             </div>
 
