added the recipe-details section, and edited some JS functionalities

--- a/index.html
+++ b/index.html
@@ -95,6 +95,29 @@
             </div>
         </div>
 
+        <div class="recipe-details">
+            <div class="img">
+                <img src="images/potato.jpeg" alt="">
+            </div>
+            <h2>Recipe Name</h2>
+            <p class="recipe-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, tempore nihil rem voluptate error aperiam
+                reprehenderit corrupti ea repudiandae, soluta corporis excepturi incidunt. Accusantium iure voluptate
+                aliquam ipsum? Odit exercitationem quidem debitis culpa eaque dicta atque. Cum labore in, fuga pariatur
+                eaque nobis voluptate similique. Nisi illo voluptates vel laudantium ullam consectetur cupiditate
+                aliquid modi omnis exercitationem quos iure magni nostrum delectus eos dolor fuga laboriosam quod
+                distinctio facilis rem, voluptatum qui non. Aperiam repellendus nulla quaerat hic corporis nihil veniam
+                molestias fugit minus. Nesciunt a, nam doloribus beatae consectetur, harum eius incidunt qui maiores
+                explicabo eveniet sit animi repudiandae corrupti vero nobis! Dicta consequuntur nemo provident
+                voluptatibus? Nostrum quo, labore eaque perferendis temporibus aut. Ex quam aspernatur minus libero.
+            </p>
+            <div class="specifications">
+                <button class="category">category</button>
+                <button class="area">area</button>
+            </div>
+            <i class="fa-solid fa-xmark"></i>
+        </div>
+
 
 
     </div>
