finally finished with the JS functionality. Can now fetch from APIs successfully. So happy

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
             <p>We live To eat. 🥐</p>
             <div class="more-info">
                 <div class="icons">
-                    <a href="">
+                    <a href="https://github.com/nguHelon/API2-food-recipe-app">
                         <button>GitHub Repo <i class="fa-brands fa-github-alt"></i></button>
                     </a>
-                    <i class="fa-brands fa-github"></i>
+                    <a href="https://github.com/nguHelon">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
                 </div>
                 <div class="account-info">
                     <div class="img">
@@ -96,7 +98,7 @@
         </div>
 
         <div class="recipe-details">
-            <div class="img">
+            <!-- <div class="img">
                 <img src="images/potato.jpeg" alt="">
             </div>
             <h2>Recipe Name</h2>
@@ -115,7 +117,7 @@
                 <button class="category">category</button>
                 <button class="area">area</button>
             </div>
-            <i class="fa-solid fa-xmark"></i>
+            <i class="fa-solid fa-xmark"></i> -->
         </div>
 
 
