just finished the responsive side of this project

--- a/index.html
+++ b/index.html
@@ -44,14 +44,16 @@
             <div class="developer-info">
                 <div class="dev1">
                     <div class="dev-name">
-                        <button>Ngu Helon</button>
+                        <button>FOOD RECIPE WEBSITE</button>
                     </div>
                     <div class="dev-quote">
                         <div class="dev-more">
-                            <h2>Ngu Helon</h2>
+                            <h2>With the mealdb API</h2>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus perspiciatis
-                                eveniet odit.
+                                This is a project I used to learn how to fetch data from an API, with the use of the
+                                <u>"fetch"</u> web API. In this website you can search by <b>category, name, area</b>
+                                and you will get either a list of recipes or a particular recipe depending on your
+                                search. Made with 💗 by Ngu Helon.
                             </p>
                         </div>
                     </div>
